search-directory: enable incremental directory load

Instead of emitting nautilus_directory_done_loading() from the
"finished" callback, do it as soon as we receive the first batch of
hits. The rest of the results will be added to the directory in
background.

https://bugzilla.gnome.org/show_bug.cgi?id=663242